--- a/containers.htm
+++ b/containers.htm
@@ -69,7 +69,7 @@
 	#announcements { 
 		background-color: white;
 		padding:15px;
-		width:65.5%;
+		width:64%;
 		float:left;
 		border:2px solid orange;
 	}
@@ -82,6 +82,7 @@
 		height:250px;
 		float:right;
 		border:1px solid orange;
+		padding:15px;
 	}
 	#socialLinks img{ 
 		width:30px;
@@ -91,19 +92,24 @@
 		width:30%;
 		float:right;
 		border:1px solid orange;
-		margin-top:5px;
+		margin-top:10px;
+		padding:15px;
 	}
 	#links {
 		background-color: LightGoldenRodYellow;
 		width:30%;
 		float:right;
-		border:2px solid orange;
+		border:1px solid orange;
+		margin-top:10px;
+		padding:15px;
 	}
 	#baysidePublication { 
 		background-color: white;
 		width:30%;
 		float:right;
-		border:2px solid grey;
+		border:1px solid orange;
+		margin-top:10px;
+		padding:15px;
 	}
 	
 	#weather { 
@@ -111,6 +117,8 @@
 	width:30%;
 	float:right;
 	border:1px solid orange;
+	margin-top:10px;
+	padding:15px;
 	}
 	
 	/*Footer Section*/
@@ -119,13 +127,29 @@
 		background-color: gray;
 	}
 	#add{ 
-	background-color: gray;
-	width:65%;
-	float: left;
+		background-color: gray;
+		width:65%;
+		height:130px;
+		float: left;
+		padding:15px;
+	}
+	#companyLinks{
+		background-color:gray;
+		height:140px;
+		float:right;
+		padding-top:20px;
+		width:32.84%;
+		
 	}
 	#companyLogo{
 		float:right;
-		width:35%;
+		width:28%;
+	}
+
+	#language{
+		background-color:white;
+		height:100px;
+		width:100%;
 	}
 
 </style>
@@ -146,15 +170,15 @@
 		<img src="images\Bayside High School - Homepage_files\HS495_CONTEMPORARY_02.jpg">
 	</div>
 	<div id="navigation">
-	<a href= "">Directory</a>
-	<a href= "">About BHS</a>
-	<a href= "">Calendar</a>
-	<a href= "">Academics</a>
-	<a href= "">Students</a>
-	<a href= "">Parents</a>
-	<a href= "">Library</a>
-	<a href= "">Guidance</a>
-
+		<a href= "">Directory</a>
+		<a href= "">About BHS</a>
+		<a href= "">Calendar</a>
+		<a href= "">Academics</a>
+		<a href= "">Students</a>
+		<a href= "">Parents</a>
+		<a href= "">Library</a>
+		<a href= "">Guidance</a>
+	
 	</div>
 	<div id="login">
 		<form>
@@ -268,7 +292,7 @@
 	</div>
 	</div>
 	<div id="socialLinks">
-		<img src="images\Bayside High School - Homepage_files\facebook_twitter_logo.jpg">
+		<img src="images\Bayside High School - Homepage_files\facebook_twitter_logo.jpg" >
 		<b>LIKE</b> us in 
 		<a href="http://www.facebook.com/BaysideHS" target=_blank><strong>FACEBOOK</strong></a><br/>
 		<b>FOLLOW</b> us in 
@@ -326,49 +350,48 @@
 		<a href="">NYC Department of Education</a>
 	</div>
 	<div id="baysidePublication">
-	<a href="">Bayside Publicatons</a>
-	<img src="images\Bayside High School - Homepage_files\rss_button.gif"/>
+		<a href="">Bayside Publicatons</a>
+		<img src="images\Bayside High School - Homepage_files\rss_button.gif"/>
 	<hr>
-	<h2>Check out <b><em>The Baysider: Community Edition</em></b> - our newest publication!</h2>
-	<img src="images\Bayside High School - Homepage_files\baysider.gif" style="height:80px"/>
+		<h2>Check out <b><em>The Baysider: Community Edition</em></b> - our newest publication!</h2>
+		<img src="images\Bayside High School - Homepage_files\baysider.gif" style="height:80px"/>
 	<hr>
-	<p><b><a href="http://www.baysidehighschool.org/www/bayside/site/hosting/Soundings%202014.pdf">Soundings 2014</a></b></p>
-	<img src="images\Bayside High School - Homepage_files\Front-Back-Cover-2014-1.gif" style="float:left;height:70px"/>
-	BHS Literary Magazine - If you would like to purchase a copy, please see Ms. Ormaechea in room 131.
+		<p><b><a href="http://www.baysidehighschool.org/www/bayside/site/hosting/Soundings%202014.pdf">Soundings 2014</a></b></p>
+		<img src="images\Bayside High School - Homepage_files\Front-Back-Cover-2014-1.gif" style="float:left;height:70px"/>
+		BHS Literary Magazine - If you would like to purchase a copy, please see Ms. Ormaechea in room 131.
 	<hr>
-	<p>View <b>The Baysider</b> (our school newspaper) </p>
-	<p>Link to The <a href="http://thebaysider.wordpress.com/">Baysider Blog</a></p>
-	<img src="images\Bayside High School - Homepage_files\newspaper_bw.png"/>
+		<p>View <b>The Baysider</b> (our school newspaper) </p>
+		<p>Link to The <a href="http://thebaysider.wordpress.com/">Baysider Blog</a></p>
+		<img src="images\Bayside High School - Homepage_files\newspaper_bw.png"/>
 
-	<p><a href="http://thebaysider.wordpress.com/">May 2014</a></h3>
-	<h3><a href="">April 2014</a></h3>
-	<h3><a href="">February 2014</a></h3>
-	<h3><a href="">December 2013</a></h3>
-	<h3><a href="">November 2013</a></h3>
+		<p><a href="http://thebaysider.wordpress.com/">May 2014</a></h3>
+		<h3><a href="">April 2014</a></h3>
+		<h3><a href="">February 2014</a></h3>
+		<h3><a href="">December 2013</a></h3>
+		<h3><a href="">November 2013</a></h3>
 	</div>
 	<div id="weather">
-	<a href="">WEATHER</a>
+		<a href="">WEATHER</a>
 
-	<script type="text/javascript" src="http://voap.weather.com/weather/oap/USGA0028?template=GENXH&par=3000000007&unit=0&key=twciweatherwidget"></script>
+		<script type="text/javascript" src="http://voap.weather.com/weather/oap/USGA0028?template=GENXH&par=3000000007&unit=0&key=twciweatherwidget"></script>
 	</div>
 </div>
 <!-- Footer: Address, Company Logo, Company Links, Select Language -->
 <div id="footer">
 	<div id="add">
-	<h5>Bayside High School, 3224 Corporal Kennedy Street, Bayside, NY 11361-1061</h5>
-	<h5>Phone: (718) 229-7600  |  Fax: (718) 423-9566</h5>
-	<p><a href="http://www.baysidehighschool.org/directions">Locate School</a></p>
+		<h5>Bayside High School, 3224 Corporal Kennedy Street, Bayside, NY 11361-1061</h5>
+		<h5>Phone: (718) 229-7600  |  Fax: (718) 423-9566</h5>
+		<p><a href="http://www.baysidehighschool.org/directions">Locate School</a></p>
 	</div>
 	<div id="companyLinks">
-	<a href="http://www.baysidehighschool.org/directions">Contact US</a>&nbsp;|&nbsp;
-	<a href="http://www.baysidehighschool.org/userpolicy">User Policy</a>
+		<a href="http://www.baysidehighschool.org/directions">Contact US</a>&nbsp;|&nbsp;
+		<a href="http://www.baysidehighschool.org/userpolicy">User Policy</a>
 
 	</div>
 	<div id="companyLogo">
 		<img src="http://www.baysidehighschool.org/themes/contemporary/images/echalkPower.gif">
 	</div>
 	<div id="language">
-	<div id="google_translate_element">
 	<a href="https://translate.google.com/?hl=en">Google Translator</a>
 		</div>
 	</div>
