--- a/containers.htm
+++ b/containers.htm
@@ -127,18 +127,18 @@
 		background-color: gray;
 	}
 	#add{ 
-		background-color: gray;
+		background-color: Gainsboro ;
 		width:65%;
 		height:130px;
 		float: left;
 		padding:15px;
 	}
 	#companyLinks{
-		background-color:gray;
+		background-color:Gainsboro ;
 		height:140px;
 		float:right;
 		padding-top:20px;
-		width:32.84%;
+		width:33%;
 		
 	}
 	#companyLogo{
@@ -150,6 +150,7 @@
 		background-color:white;
 		height:100px;
 		width:100%;
+		padding:15px;
 	}
 
 </style>
