--- a/containers.htm
+++ b/containers.htm
@@ -355,10 +355,10 @@
 		<img src="images\Bayside High School - Homepage_files\rss_button.gif"/>
 	<hr>
 		<h2>Check out <b><em>The Baysider: Community Edition</em></b> - our newest publication!</h2>
-		<img src="images\Bayside High School - Homepage_files\baysider.gif" style="height:80px"/>
+		<img src="images\Bayside High School - Homepage_files\baysider.gif" style="height:80px" style="img-align:center"/>
 	<hr>
-		<p><b><a href="http://www.baysidehighschool.org/www/bayside/site/hosting/Soundings%202014.pdf">Soundings 2014</a></b></p>
-		<img src="images\Bayside High School - Homepage_files\Front-Back-Cover-2014-1.gif" style="float:left;height:70px"/>
+		<p style="text-align:center"><b><a href="http://www.baysidehighschool.org/www/bayside/site/hosting/Soundings%202014.pdf">Soundings 2014</a></b></p>
+		<img src="images\Bayside High School - Homepage_files\Front-Back-Cover-2014-1.gif" style="width100px;height:150px"/>
 		BHS Literary Magazine - If you would like to purchase a copy, please see Ms. Ormaechea in room 131.
 	<hr>
 		<p>View <b>The Baysider</b> (our school newspaper) </p>
